task-2/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: appclue
spec:
  selector:
    app: trusted
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
