task-2/my-app-network-policy.yaml
iapiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
  namespace: appclue
spec:
  podSelector:
    matchLabels:
      app: my-app   
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}    # Allows incoming traffic from all pods within the same namespace
    - podSelector:
        matchLabels:
          app: trusted    # Allows incoming traffic from a specific pod labeled with app=trusted.
  egress:
  - to:
    - podSelector: {}
